2007-07-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.init, DVB.do_check,
	  DVB.get_pipeline_string):
	Check for dvbsrc version and start of using new properties
	when able.
	Replace stupid par assignment.

2007-07-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	dvb producer does not need to have such a high clock
	priority so use the default clock priority.

2007-07-04  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/dvb/dvb.xml:
	Add missing dependency.

2007-06-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string):
	Fix use of scaled_width that may not be initialised.

2007-05-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string):
	* flumotion/component/dvb/dvb.xml:
	Add deinterlacing support using a real deinterlacer.

2007-04-05  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* configure.ac:
	Back to dev.

== release 0.4.1 ==

2007-04-05  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/dvb/admin_gtk.py (DVBAdminGtkNode.haveWidgetTree,
	  DVBAdminGtkNode.setUIState, DVBAdminGtkNode.lockSet, DVBAdminGtk):
	* flumotion/component/dvb/dvb.glade:
	Add lock value to admin.
	Reduce padding of widgets.

2007-04-03  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/dvb/admin_gtk.py (DVBAdminGtkNode.haveWidgetTree,
	  DVBAdminGtkNode.signalSet, DVBAdminGtkNode.snrSet,
	  DVBAdminGtkNode.berSet, DVBAdminGtkNode.uncSet, DVBAdminGtk,
	  DVBAdminGtk.setup):
	* flumotion/component/dvb/dvb.xml:
	Fix gtk admin to actually work and get bundled.

2007-04-02  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/dvb/Makefile.am:
	* flumotion/component/dvb/admin_gtk.py (DVBAdminGtkNode,
	  DVBAdminGtkNode.haveWidgetTree, DVBAdminGtkNode.setUIState,